# lodestar

./: .gitignore  AGENTS.md  CLAUDE.md  COMM-002-implementation-summary.md  IMPLEMENTATION_SUMMARY.md  MCP_TEST.md  MCP_VSCODE_TEST_SCRIPT.md  PRD.md  PRD_REFS.md  PUBLISH.md  README.md  REPORT.md  TODO.md  lodestar-mcp-prd.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  publish.yml  windows.yml
.klondike/: features.json
.lodestar/: spec.yaml
docs/: getting-started.md  index.md  mcp.md
docs/cli/: agent.md  index.md  msg.md  other.md  task.md
docs/concepts/: index.md  lease-mechanics.md  task-lifecycle.md  two-plane-model.md
docs/guides/: agent-coordination.md  agent-workflow.md  ci-integration.md  error-handling.md  index.md
docs/reference/: index.md
scripts/: publish.ps1
src/lodestar/: __init__.py
src/lodestar/cli/: app.py
src/lodestar/cli/commands/: agent.py  doctor.py  export.py  init.py  mcp.py  msg.py  reset.py  status.py  task.py
src/lodestar/cli/formatters/: brief_formatter.py  task_formatter.py
src/lodestar/cli/templates/: __init__.py  agents_md.py
src/lodestar/mcp/: notifications.py  output.py  prompts.py  resources.py  server.py  utils.py
src/lodestar/mcp/tools/: agent.py  events.py  message.py  repo.py  task.py  task_mutations.py
src/lodestar/models/: envelope.py  runtime.py  spec.py
src/lodestar/runtime/: converters.py  database.py  engine.py  models.py
src/lodestar/runtime/alembic/versions/: 003_task_only_messages.py
src/lodestar/runtime/repositories/: agent_repo.py  event_repo.py  lease_repo.py  message_repo.py
src/lodestar/spec/: __init__.py  loader.py
src/lodestar/util/: __init__.py  paths.py  prd.py  retry.py  time.py
tests/: test_batch_verify.py  test_cli.py  test_concurrent_verification.py  test_mcp_integration.py  test_mcp_tools.py  test_models.py  test_prd_context.py  test_retry.py  test_runtime.py  test_spec.py  test_util.py
